Updated by task 'MD_MANUAL_HANDOFF_1741338072413-DX-MISC-DOCS'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-65-lts.en/commit/874736b9743ce1d4883e745a342dff0bd8bda43e